examples/test/testpolicy8398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8398
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key5: value45
      key25: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value15
          key19: value34
          key23: value48
      podSelector:
        matchLabels:
          key10: value35
          key38: value42
          key1: value38
